fix scroll bar was always visible in lists

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -568,6 +568,12 @@ textarea {
   width: 100%;
   position: relative;
 }
+.flexTable .table{
+  overflow: hidden;
+}
+.flexTable.expanded .table{
+  overflow: visible;
+}
 .flexTable .spreaded_titles{
   display: none;
 }
